# devops

./: .gitignore  .pre-commit-config.yaml  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  frontend-tests.yml
scripts/: setup  setup_project
src/backend/: .coverage  CHANGELOG.md  coverage.xml  pyproject.toml
src/frontend/: .coverage  CHANGELOG.md  coverage.xml  pyproject.toml
src/frontend/src/frontend/: main.py
